Introduce SkipCriteria for modular skip decisions
- Refined SkipSectionContext to uniform boolean tests on the cluster properties
- Removed accessors to specific criteria from SkipSection (used only on tests), adjusted test assertions
- Version range checks commented out, as they have been already addressed in a pending PR (#103311)